--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@types/datatables.net": "^1.10.24",
+    "angular-datatables": "^16.0.0",
     "bootstrap": "^5.3.0",
+    "datatables.net": "^1.13.6",
+    "datatables.net-buttons": "^2.4.1",
+    "datatables.net-buttons-dt": "^2.4.1",
+    "datatables.net-dt": "^1.13.6",
     "jquery": "^3.7.0",
+    "jszip": "^3.10.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,7 +36,9 @@
     "@angular-devkit/build-angular": "^16.1.3",
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.16",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
